# quantlib-irs-toolkit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  publish.yml  test.yml
examples/: basic_usage.py
src/quantlib_irs_toolkit/: __init__.py  curves.py
tests/: test_curves.py
